tests/baselines/reference/decoratorMetadataWithImportDeclarationNameCollision7.errors.txt
tests/cases/compiler/service.ts(7,9): error TS2503: Cannot find namespace 'db'.
tests/cases/compiler/service.ts(9,21): error TS2503: Cannot find namespace 'db'.


==== tests/cases/compiler/db.ts (0 errors) ====
    export default class db {
        public doSomething() {
        }
    }
    
==== tests/cases/compiler/service.ts (2 errors) ====
    import db from './db';
    function someDecorator(target) {
        return target;
    }
    @someDecorator
    class MyClass {
        db: db.db; //error
            ~~
!!! error TS2503: Cannot find namespace 'db'.
    
        constructor(db: db.db) { // error
                        ~~
!!! error TS2503: Cannot find namespace 'db'.
            this.db = db;
            this.db.doSomething();
        }
    }
    export {MyClass};
    